# rapidocr-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_EN.md  UV_CONVERSION_REPORT.md  Using_uv_with_FastAPI.md  docker-compose.yml  pyproject.toml  quickstart.sh
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
app/: __init__.py  config.py  dependencies.py  file_manager.py  gpu_utils.py  logging_config.py  main.py  models.py  ocr_service.py
app/routers/: health.py  ocr.py
docs/: API_REFERENCE.md  ARCHITECTURE_OPTIMIZATION_REPORT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKER_BUILD_FIX.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_SUPPORT_GUIDE.md  PROJECT_MODERNIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  RAPIDOCR_UPGRADE_REPORT.md  README.md  UVICORN_CONFIGURATION.md
tests/: __init__.py  conftest.py  test_gpu.py  test_main.py
